src/objects/jj_rb_IMS_Sales_Data__c.object
<CustomObject>
    <description>This object will store product volume data per customer from the Intelligent Marketing System (IMS).</description>
    <fields>
        <fullName>jj_rb_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the customer.</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>IMS Sales Data</relationshipLabel>
        <relationshipName>IMS_Sales_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jj_rb_Dataload_External_id__c</fullName>
        <description>External id to check if a duplicate IMS Sales Data record is being uploaded</description>
        <externalId>true</externalId>
        <label>Dataload External id</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>jj_rb_IMS_Customer_Number__c</fullName>
        <label>IMS Customer ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_IMS_Customer__c</fullName>
        <description>Customer information from the IMS flat file.</description>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_IMS_Data_Month__c</fullName>
        <description>Month value of this IMS Data</description>
        <label>IMS Data Month</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>jj_rb_IMS_Data_Year__c</fullName>
        <description>Year value of the IMS data</description>
        <label>IMS Data Year</label>
        <picklist>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2031</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2032</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2033</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2034</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2035</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>jj_rb_IMS_Product_Info__c</fullName>
        <description>This field will store the Product information from IMS flat file.</description>
        <label>Product Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_IMS_Product_Number__c</fullName>
        <label>IMS Product ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_IMS_Volume__c</fullName>
        <description>This field will store the quantity of the product.</description>
        <label>Volume</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jj_rb_Product_Name__c</fullName>
        <label>Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the rebate product.</description>
        <label>Product</label>
        <referenceTo>jj_rb_Rebate_Product__c</referenceTo>
        <relationshipLabel>IMS Sales Data</relationshipLabel>
        <relationshipName>IMS_Sales_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>IMS Sales Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>jj_rb_Customer__c</columns>
        <columns>jj_rb_Product__c</columns>
        <columns>jj_rb_IMS_Data_Month__c</columns>
        <columns>jj_rb_IMS_Data_Year__c</columns>
        <columns>jj_rb_IMS_Volume__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IMS-{000}</displayFormat>
        <label>IMS Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IMS Sales Data</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>jj_rb_IMS_Data_Month_Required</fullName>
        <active>true</active>
        <description>Month value is required.</description>
        <errorConditionFormula>ISPICKVAL(jj_rb_IMS_Data_Month__c , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>jj_rb_IMS_Data_Month__c</errorDisplayField>
        <errorMessage>Month is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>jj_rb_IMS_Data_Year_Required</fullName>
        <active>true</active>
        <description>Year value is required.</description>
        <errorConditionFormula>ISPICKVAL( jj_rb_IMS_Data_Year__c , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>jj_rb_IMS_Data_Year__c</errorDisplayField>
        <errorMessage>Year is required.</errorMessage>
    </validationRules>
</CustomObject>